--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
     <title>CS2PROtournament2010</title>
 </head>
 <body>
-    <br>
+    <marquee style="color:white; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" behavior="" direction="right">
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+        Глеб федин сосал
+    </marquee>
     <div class="main-flow">
 
     </div>
