--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         Глеб федин сосал
         Глеб федин сосал
         Глеб федин сосал
+        Глеб федин сосал
     </marquee>
     <div class="main-flow">
 
